--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow_light">#ffffcc</color>
+    <color name="yellow_dark">#ffff99</color>
+    <color name="yellow_darker">#ffff00</color>
+    <color name="orange">#FFA500</color>
+    <color name="orange_light">#FFB225</color>
+    <color name="yellow">#FFCC01</color>
 </resources>
